// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`세 크기가 같은 구조다 ([[ADR-147]] 정정 7 · 38) 2x2 — 스냅샷 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "columnGap": 6,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "padding": 12,
        "rowGap": 6,
      }
    }
    testID="widget-representative-character"
  >
    <View
      style={
        {
          "borderRadius": 9999,
          "flexShrink": 0,
          "height": 56,
          "overflow": "hidden",
          "width": 56,
        }
      }
    >
      <Image
        accessibilityLabel="단풍루틴"
        source={
          {
            "uri": "https://open.api.nexon.com/static/maplestory/character/look/abc",
          }
        }
        style={
          {
            "height": 350,
            "left": -143.5,
            "position": "absolute",
            "top": -149.33333333333334,
            "width": 350,
          }
        }
        testID="representative-face"
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 2,
          "rowGap": 2,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 4,
            "flexDirection": "row",
            "justifyContent": "center",
            "rowGap": 4,
          }
        }
        testID="representative-name-line"
      >
        <View
          style={
            {
              "flexShrink": 0,
            }
          }
          testID="representative-emblem"
        >
          <Image
            accessibilityLabel="스카니아"
            resizeMode="contain"
            source={
              {
                "testUri": "../../../src/assets/worlds/scania.png",
              }
            }
            style={
              {
                "height": 16,
              }
            }
          />
        </View>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 17.5,
            }
          }
          testID="representative-name"
        >
          단풍루틴
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#645C42",
              "flexShrink": 0,
              "fontSize": 10,
              "lineHeight": 12.5,
            }
          }
          testID="representative-guild"
        >
          백호단
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 6,
            "flexDirection": "row",
            "justifyContent": "center",
            "rowGap": 6,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          style={
            {
              "color": "#645C42",
              "flexShrink": 0,
              "fontSize": 10.5,
              "lineHeight": 13.13,
            }
          }
        >
          Lv. 291
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#645C42",
              "flexShrink": 1,
              "fontSize": 10.5,
              "lineHeight": 13.13,
            }
          }
          testID="representative-job"
        >
          아크메이지(불,독)
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "columnGap": 4,
          "rowGap": 4,
          "width": "100%",
        }
      }
      testID="representative-exp"
    >
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 4,
            "flexDirection": "row",
            "rowGap": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          style={
            {
              "color": "#645C42",
              "fontSize": 10,
              "fontWeight": "600",
            }
          }
        >
          EXP
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 10,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "600",
              "marginLeft": "auto",
            }
          }
        >
          80.300%
        </Text>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 80.3,
          }
        }
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "height": 6,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            {
              "backgroundColor": "#F58B0F",
              "borderRadius": 9999,
              "height": 6,
              "width": "80.3%",
            }
          }
          style={
            [
              {
                "backgroundColor": "#F58B0F",
                "borderRadius": 9999,
                "height": 6,
                "width": "80.3%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`세 크기가 같은 구조다 ([[ADR-147]] 정정 7 · 38) 4x1 — 스냅샷 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "columnGap": 10,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "padding": 12,
        "rowGap": 10,
      }
    }
    testID="widget-representative-character"
  >
    <View
      style={
        {
          "borderRadius": 9999,
          "flexShrink": 0,
          "height": 44,
          "overflow": "hidden",
          "width": 44,
        }
      }
    >
      <Image
        accessibilityLabel="단풍루틴"
        source={
          {
            "uri": "https://open.api.nexon.com/static/maplestory/character/look/abc",
          }
        }
        style={
          {
            "height": 275,
            "left": -112.75,
            "position": "absolute",
            "top": -117.33333333333333,
            "width": 275,
          }
        }
        testID="representative-face"
      />
    </View>
    <View
      style={
        {
          "columnGap": 2,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "rowGap": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 4,
            "flexDirection": "row",
            "rowGap": 4,
          }
        }
        testID="representative-name-line"
      >
        <View
          style={
            {
              "flexShrink": 0,
            }
          }
          testID="representative-emblem"
        >
          <Image
            accessibilityLabel="스카니아"
            resizeMode="contain"
            source={
              {
                "testUri": "../../../src/assets/worlds/scania.png",
              }
            }
            style={
              {
                "height": 15,
              }
            }
          />
        </View>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "flexShrink": 1,
              "fontSize": 13,
              "fontWeight": "600",
              "lineHeight": 16.25,
            }
          }
          testID="representative-name"
        >
          단풍루틴
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#645C42",
              "flexShrink": 0,
              "fontSize": 10,
              "lineHeight": 12.5,
            }
          }
          testID="representative-guild"
        >
          백호단
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 6,
            "flexDirection": "row",
            "rowGap": 6,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          style={
            {
              "color": "#645C42",
              "flexShrink": 0,
              "fontSize": 10.5,
              "lineHeight": 13.13,
            }
          }
        >
          Lv. 291
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#645C42",
              "flexShrink": 1,
              "fontSize": 10.5,
              "lineHeight": 13.13,
            }
          }
          testID="representative-job"
        >
          아크메이지(불,독)
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "columnGap": 4,
          "flexShrink": 0,
          "rowGap": 4,
          "width": 100,
        }
      }
      testID="representative-exp"
    >
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 4,
            "flexDirection": "row",
            "rowGap": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          style={
            {
              "color": "#645C42",
              "fontSize": 10,
              "fontWeight": "600",
            }
          }
        >
          EXP
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 10,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "600",
              "marginLeft": "auto",
            }
          }
        >
          80.300%
        </Text>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 80.3,
          }
        }
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "height": 6,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            {
              "backgroundColor": "#F58B0F",
              "borderRadius": 9999,
              "height": 6,
              "width": "80.3%",
            }
          }
          style={
            [
              {
                "backgroundColor": "#F58B0F",
                "borderRadius": 9999,
                "height": 6,
                "width": "80.3%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`세 크기가 같은 구조다 ([[ADR-147]] 정정 7 · 38) 4x2 — 스냅샷 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 12,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 12,
      }
    }
    testID="widget-representative-character"
  >
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 12,
          "flexDirection": "row",
          "rowGap": 12,
        }
      }
    >
      <View
        style={
          {
            "borderRadius": 9999,
            "flexShrink": 0,
            "height": 72,
            "overflow": "hidden",
            "width": 72,
          }
        }
      >
        <Image
          accessibilityLabel="단풍루틴"
          source={
            {
              "uri": "https://open.api.nexon.com/static/maplestory/character/look/abc",
            }
          }
          style={
            {
              "height": 450,
              "left": -184.5,
              "position": "absolute",
              "top": -192,
              "width": 450,
            }
          }
          testID="representative-face"
        />
      </View>
      <View
        style={
          {
            "columnGap": 2,
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "rowGap": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 4,
              "flexDirection": "row",
              "rowGap": 4,
            }
          }
          testID="representative-name-line"
        >
          <View
            style={
              {
                "flexShrink": 0,
              }
            }
            testID="representative-emblem"
          >
            <Image
              accessibilityLabel="스카니아"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../src/assets/worlds/scania.png",
                }
              }
              style={
                {
                  "height": 20,
                }
              }
            />
          </View>
          <Text
            allowFontScaling={false}
            maxFontSizeMultiplier={1.235}
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexShrink": 1,
                "fontSize": 19,
                "fontWeight": "600",
                "lineHeight": 23.75,
              }
            }
            testID="representative-name"
          >
            단풍루틴
          </Text>
          <Text
            allowFontScaling={false}
            maxFontSizeMultiplier={1.235}
            numberOfLines={1}
            style={
              {
                "color": "#645C42",
                "flexShrink": 0,
                "fontSize": 12,
                "lineHeight": 15,
              }
            }
            testID="representative-guild"
          >
            백호단
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 6,
              "flexDirection": "row",
              "rowGap": 6,
            }
          }
        >
          <Text
            allowFontScaling={false}
            maxFontSizeMultiplier={1.235}
            style={
              {
                "color": "#645C42",
                "flexShrink": 0,
                "fontSize": 13,
                "lineHeight": 16.25,
              }
            }
          >
            Lv. 291
          </Text>
          <Text
            allowFontScaling={false}
            maxFontSizeMultiplier={1.235}
            numberOfLines={1}
            style={
              {
                "color": "#645C42",
                "flexShrink": 1,
                "fontSize": 13,
                "lineHeight": 16.25,
              }
            }
            testID="representative-job"
          >
            아크메이지(불,독)
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "columnGap": 4,
          "rowGap": 4,
          "width": "100%",
        }
      }
      testID="representative-exp"
    >
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 4,
            "flexDirection": "row",
            "rowGap": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          style={
            {
              "color": "#645C42",
              "fontSize": 10,
              "fontWeight": "600",
            }
          }
        >
          EXP
        </Text>
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 10,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "600",
              "marginLeft": "auto",
            }
          }
        >
          80.300%
        </Text>
      </View>
      <View
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 80.3,
          }
        }
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "height": 6,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            {
              "backgroundColor": "#F58B0F",
              "borderRadius": 9999,
              "height": 6,
              "width": "80.3%",
            }
          }
          style={
            [
              {
                "backgroundColor": "#F58B0F",
                "borderRadius": 9999,
                "height": 6,
                "width": "80.3%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
